codex-rs/tui-composer/src/bottom_pane/snapshots/codex_tui_composer__bottom_pane__chat_composer__tests__footer_mode_status_line_persists_with_running_draft.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│❯ Improve documentation in @filename                                                              │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"  codex · main-fork · gpt-5.5 · 65% 172.1k/258.4k · Tasks 2/5                                       "
"  tab to queue message                                                           100% context left  "
